--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -1,5 +1,6 @@
 @import 'text';
 @import 'flex';
+@import 'colors';
 
 html {
   line-height: 1.4;
@@ -25,45 +26,50 @@ input {
 }
 
 #app {
-  .inline-block {
-    position: relative;
-    display: inline-block;
-    margin-right: 20px;
-    margin-top: 6px;
-    .a-title {
-      position: absolute;
-      left: 10px;
-      top: 9px;
-      z-index: 1;
-      color: #ddd;
-    }
+  width: 1180px;
+  margin: 0 auto;
+}
+
+$inputWidth: 220px;
+$marginRight: 20px;
+.a-input-block {
+  position: relative;
+  display: inline-block;
+  margin-right: $marginRight;
+  margin-top: 6px;
+  .a-title {
+    position: absolute;
+    left: 10px;
+    top: 9px;
+    z-index: 1;
+    color: #ddd;
   }
 
   // input
   .el-input {
-    width: 240px;
+    width: $inputWidth;
     .el-input__inner {
-      padding-left: 120px;
+      padding-left: 100px;
     }
   }
 
   // select
   .el-select {
-    width: 240px;
+    width: $inputWidth;
     .el-input__inner {
-      padding-left: 160px;
+      padding-left: 140px;
       padding-right: 0;
     }
   }
 
-  // 选择日期范围
+  // daterange
   .el-date-editor--daterange {
-    width: 500px;
+    width: $inputWidth * 2 + $marginRight;
     .el-range__icon {
       display: none;
     }
     .el-range-input:first-of-type {
-      padding-left: 100px;
+      padding-left: 80px;
     }
   }
 }
