--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -20,7 +20,7 @@
   }
 
   // 侧边栏 Sidebar container
-  .sidebar-container {
+  .sidebar-wrapper {
     transition: width 0.28s;
     width: $sideBarWidth !important;
     height: 100%;
